--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta.</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post">
+                    
+                </form>
             </div>
         </section>
     </main>
