--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
@@ -17,8 +18,21 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta.</p>
-                <form action="login.php" method="post">
-                    
+                <form action="login.php" method="post" autocomplete="on">
+                     <div class="campo">
+                        <i class="material-icons">person</i>
+                        <label for="ilogin">Login</label>
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required>
+                     </div>
+                     <div class="campo">
+                        <i class="material-icons">vpn_key</i>
+                        <label for="isenha">Senha</label>
+                        <input type="password" name="senha" id="iname" placeholder="sua senha" autocomplete="current-password" required>
+                     </div>
+                     <input type="submit" value="Entrar">
+                     <a href="esqueci.html">
+                        Esqueci a senha <i class="material-icons"></i>
+                     </a>
                 </form>
             </div>
         </section>
