--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <input type="password" name="senha" id="iname" placeholder="sua senha" autocomplete="current-password" required>
                      </div>
                      <input type="submit" value="Entrar">
-                     <a href="esqueci.html">
-                        Esqueci a senha <i class="material-icons"></i>
+                     <a href="esqueci.html" class="botao">
+                        Esqueci a senha <i class="material-icons">mail</i>
                      </a>
                 </form>
             </div>
